@startuml world_and_collision
' Super Mario Plus - level loading, terrain and camera
' Verified against the source tree at commit b378acb.
' Matches: include/environment/, src/environment/, include/combatsystem/

title World — level loading, terrain and camera

skinparam classAttributeIconSize 0

enum CollisionType {
  None
  Solid
  OneWay
  Hazard
  Ladder
  Water
  Die
  Lotus
  Cloud
  Poison
  Lava
  Slop
  Vine
}

class TileMap {
  - map<int, Texture2D> tilesetTextures
  - RenderTexture2D mapCanvas
  - vector<vector<int>> backgroundLayer
  - vector<vector<int>> displayLayer
  - vector<vector<CollisionType>> collisionLayer
  - map<string, vector<NeighbourInfo>> currentNeighbours
  - vector<Vector2> playerSpawns
  - vector<LDtkEntityData> entityData_
  - int tileSize, columns, rows
  --
  + LoadLDtkMap(path, levelName) : bool
  + LoadCustomMap(CustomMapData&) : bool
  + Draw() const
  + GetCollidingTiles(Rectangle) : vector<CollisionTile>
  + GetNeighbour(dir, gx, gy) : string
  + GetPlayerSpawns() : vector<Vector2>
  + GetEntityData() : vector<LDtkEntityData>
}
note right of TileMap
  Two entry points, one internal model.
  LoadLDtkMap serves the authored campaign,
  LoadCustomMap serves the in-game editor,
  and everything downstream is identical.

  The static background is composited once
  into mapCanvas instead of being redrawn
  tile by tile every frame.
end note

class LDtkEntityData {
  + string identifier
  + Vector2 px
  + string iid
  + json fieldInstances
  + float width, height
}
note bottom of LDtkEntityData
  iid is the stable identifier that makes
  world state saveable — see save_architecture.puml
end note

package "Strategy + queue — camera behaviour" {
  interface ICameraMode {
    + {abstract} update(MapCamera&, float dt)
    + {abstract} isFinished() const : bool
    + {abstract} getName() const : string
  }
  class CameraFollowMode {
    - Vector2 targetPos1, targetVel
    - int mapWidth, mapHeight
  }
  class CameraPanMode {
    - Vector2 startPos, targetPos
    - float duration, elapsed
    - EaseType easeType
  }
  class CameraZoomMode {
    - float startZoom, targetZoom
    - float duration, elapsed
  }
  ICameraMode <|.. CameraFollowMode
  ICameraMode <|.. CameraPanMode
  ICameraMode <|.. CameraZoomMode
}

class MapCamera {
  - Camera2D camera
  - unique_ptr<ICameraMode> currentMode
  - queue<unique_ptr<ICameraMode>> modeQueue
  - bool isInCinematicMode
  + Update(target, vel, mapW, mapH, dt, target2)
  + pushMode(unique_ptr<ICameraMode>)
  + updateMode(float dt)
  + clearModes()
  + BeginMode()
  + EndMode()
}
note right of MapCamera
  Following is one behaviour among the
  three, not a special default. Returning
  to normal is simply the next entry in
  the queue, which is why an interrupted
  cutscene cannot leave the camera stuck.
end note

package "Combat" {
  interface ICollisionDetector {
    + {abstract} detect(hitboxes, entities) : vector<CollisionPair>
  }
  class BruteForceDetector
  class CombatSystem {
    - unique_ptr<ICollisionDetector> detector
    + update(vector<Entity*>, float dt)
    + renderDebug(vector<Entity*>) const
  }
  class Hitbox {
    + Rectangle rect
    + int damage, defense
    + Entity* owner
    + Entity* ignoreEntity
    + uint32_t targetFactionMask
    + canHit(EntityFaction) const : bool
  }
  ICollisionDetector <|.. BruteForceDetector
  CombatSystem *-- ICollisionDetector
  CombatSystem ..> Hitbox : resolves
}

TileMap ..> CollisionType : grid of
TileMap *-- LDtkEntityData
MapCamera *-- ICameraMode : current
MapCamera o-- ICameraMode : queued

@enduml
